Bug 490321 - Javascript accept policy ignored on first page load
Summary: Javascript accept policy ignored on first page load
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: webenginepart (other bugs)
Version First Reported In: 24.05.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-07-15 18:33 UTC by sebaro
Modified: 2024-07-28 07:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sebaro 2024-07-15 18:33:04 UTC
SUMMARY
When Javascript is disabled but some domains are allowed to run it, on first page load the accept policy is ignored, eg google.com:
"Javascript must be enabled in order for you to use Gmail. However, it seems Javascript is either disabled or not supported by your browser"
On page reload it works.

STEPS TO REPRODUCE
1. Disable Javascript globally
2. Add accept policy for a domain
3. Open page/domain

OBSERVED RESULT
The page Javascript won't load.

EXPECTED RESULT
Javascript loads

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  Gentoo
KDE Plasma Version: 6.2.1
KDE Frameworks Version:  6.4.0
Qt Version: 6.7.1
Comment 1 Bug Janitor Service 2024-07-25 15:55:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/konqueror/-/merge_requests/344
Comment 2 Stefano Crocco 2024-07-28 07:26:28 UTC
Git commit 4f1c2378453a287e22229c7058319fa63ea0fc9c by Stefano Crocco.
Committed on 28/07/2024 at 07:21.
Pushed by stefanocrocco into branch 'master'.

Apply URL-specific javascript policy in WebEnginePage::acceptNavigationRequest, too

M  +3    -0    webenginepart/src/webenginepage.cpp

https://invent.kde.org/network/konqueror/-/commit/4f1c2378453a287e22229c7058319fa63ea0fc9c
Comment 3 Stefano Crocco 2024-07-28 07:53:10 UTC
Git commit 135ed489debdb6eb3d39228c91f9ca34c477c8a2 by Stefano Crocco.
Committed on 28/07/2024 at 07:34.
Pushed by stefanocrocco into branch 'release/24.08'.

Apply URL-specific javascript policy in WebEnginePage::acceptNavigationRequest, too


(cherry picked from commit 4f1c2378453a287e22229c7058319fa63ea0fc9c)

Co-authored-by: Stefano Crocco <stefano.crocco@alice.it>

M  +3    -0    webenginepart/src/webenginepage.cpp

https://invent.kde.org/network/konqueror/-/commit/135ed489debdb6eb3d39228c91f9ca34c477c8a2