Apply URL-specific javascript policy in WebEnginePage::acceptNavigationRequest, too

BUG: 490321